# C-Projects

./: README.md
labwork1/: CMakeLists.txt  main.cpp  test.txt
labwork10/: CMakeLists.txt  Request.cpp  Request.h  WeatherDrawer.cpp  WeatherDrawer.h  data.json  main.cpp  pictures.h  text
labwork11/: CMakeLists.txt  algorithms.h  main.cpp  xrange.h  zip.h
labwork11/tests/: CMakeLists.txt  tests.cpp
labwork12/: CMakeLists.txt  MyDB.cpp  MyDB.h  db.txt  main.cpp
labwork12/tests/: CMakeLists.txt  tests.cpp
labwork3/: CMakeLists.txt  bitmapfile.cpp  bitmapfile.h  main.cpp  test.tsv
labwork4/: CMakeLists.txt  arch.cpp  arch.h  main.cpp
labwork5/lib/: ArgParser.cpp  ArgParser.h
labwork5/tests/: argparser_test.cpp
labwork6/: CMakeLists.txt
labwork6/lib/: parser.cpp  parser.h
labwork6/tests/: test_format.cpp  test_parser.cpp
labwork7/: CMakeLists.txt  frames_printer.cpp  frames_reader.cpp  library.h  main.cpp  parser_ID3v2.cpp  parser_ID3v2.h
labwork8/: CCirtucalBuffer.h  CCirtucalBufferExt.h  CMakeLists.txt  Iterator.h  main.cpp
labwork8/tests/: test_buffer.cpp  test_buffer_ext.cpp
labwork9/: CMakeLists.txt  MemoryPoolAllocator.h  main.cpp  memory_pool.cpp  memory_pool.h
